# candle_embed

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  models.rs
