[package]
categories=[
    "cuda",
    "embeddings",
    "hugging-face",
    "vector-embeddings",
    "vectors",
]
description="A simple, CUDA or CPU powered, library for creating vector embeddings using Candle and models from Hugging Face"
edition="2021"
homepage="https://github.com/shelbyJenkins/candle_embed"
keywords=[
    "cuda",
    "embeddings",
    "hugging-face",
    "vector-embeddings",
    "vectors",
]
license="MIT"
name="candle_embed"
readme="README.md"
repository="https://github.com/shelbyJenkins/candle_embed"
version="0.1.0"

[dependencies]
anyhow="1.0.82"
candle={version="0.4.1", package="candle-core", default-features=false}
candle-transformers="0.4.1"
candle_nn={version="0.4.1", package="candle-nn", default-features=false}
hf-hub={version="0.3.2", features=["tokio"]}
serde_json="1.0.116"
tokenizers="0.19.0"

[features]
cuda=["candle/cuda", "candle/cudnn", "candle_nn/cuda"]
default=["cuda"]
