[package]
categories=["cuda", "embeddings", "huggingface", "search", "vectors"]
description="Text embeddings with Candle. Fast and configurable. Use any model from Hugging Face. CUDA or CPU powered."
edition="2021"
homepage="https://github.com/shelbyJenkins/candle_embed"
keywords=["cuda", "embeddings", "huggingface", "search", "vectors"]
license="MIT"
name="candle_embed"
readme="README.md"
repository="https://github.com/shelbyJenkins/candle_embed"
version="0.1.4"

[dependencies]
anyhow="1.0.82"
candle={version="0.5.0", package="candle-core", default-features=false}
candle-transformers="0.5.0"
candle_nn={version="0.5.0", package="candle-nn", default-features=false}
hf-hub={version="0.3.2", features=["tokio"]}
serde_json="1.0.116"
tokenizers="0.19.1"

[features]
cuda=["candle/cuda", "candle/cudnn", "candle_nn/cuda"]
default=["cuda"]
